changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Give access to move_to() to plugins.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2008-05-12

Rewrite NPC communication system. See doc/objects 'J. NPC's Speak out' for more information,
or check doc/Developers/dialog.dox, or the maps/test/say map.
 common/loader.l Makefile.am object.c
 doc/Developers/mainpage.dox objects
 include/define.h Makefile.am object.h libproto.h typesproto.h
 server/c_chat.c monster.c
New files:
 common/dialog.c 
 doc/Developers/dialog.dox
 include/dialog.h
Nicolas Weeger 2008-05-11

Add 'move_to' function, that can be used later on for eg plugins
(should replace Python's CFMove).
 include/sproto.h
 server/monster.c move.c
Nicolas Weeger 2008-05-11

Merge NPC and MAGIC_EAR handling, add comments, fix prototype to use const.
 include/sproto.h
 server/monster.c
Nicolas Weeger 2008-05-11

Document a few things.
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim_proto.h
Nicolas Weeger 2008-05-10

Fix bombs being really too powerful.
 server/spell_attack.c: set the maxhp (for spell merging) for bombs too.
Nicolas Weeger 2008-05-10

Make the 'second' timemode work. Don't set FLAG_WIZ* on non player object.
Correctly remove event if unique.
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim_proto.h
Nicolas Weeger 2008-05-10

Fix a few warnings.
 include/sproto.h: add prototype for query_cost_string().
 test/toolkit/toolkit_common.c: make argument const.
Nicolas Weeger 2008-05-10

Rename some functions, fix documentation.
 doc/Developers/login.dox
 include/sockproto.h